--- a/code/frontend/index.html
+++ b/code/frontend/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Chess Cake</title>
+    <title>Selfie</title>
 
     <!-- Meta Tags -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="png" href="/iconQueenBordered@0.25x.png" />
+    <link rel="icon" type="png" href="#" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Google Fonts -->
@@ -15,6 +15,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
+
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet'>
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet'>
   </head>
   <body style="margin: 0px">
     <div id="root"></div>
