--- a/code/frontend/index.html
+++ b/code/frontend/index.html
@@ -16,6 +16,11 @@
 
   <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet'>
   <link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet'>
+  <style>
+    .border-custom-color {
+            border-color: #ff6347; /* Tomato */
+        }
+  </style>
   <!-- <link href='./bootstrap.min.css' rel='stylesheet'> -->
 
 </head>
