--- a/code/frontend/index.html
+++ b/code/frontend/index.html
@@ -2,6 +2,39 @@
 <html lang="en">
 
 <head>
+  <script>
+    var console = {};
+    console.log = function () { }; // Disable console.log
+    console.warn = function () { }; // Disable console.warn
+    console.error = function () { }; // Disable console.error
+    console.debug = function () { }; // Disable console.debug
+    console.info = function () { }; // Disable console.info
+    console.table = function () { }; // Disable console.table
+    console.time = function () { }; // Disable console.time
+    console.timeEnd = function () { }; // Disable console.timeEnd
+    console.timeLog = function () { }; // Disable console.timeLog
+    console.timeStamp = function () { }; // Disable console.timeStamp
+    console.trace = function () { }; // Disable console.trace
+    console.group = function () { }; // Disable console.group
+    console.groupCollapsed = function () { }; // Disable console.groupCollapsed
+    console.groupEnd = function () { }; // Disable console.groupEnd
+    console.clear = function () { }; // Disable console.clear
+    console.count = function () { }; // Disable console.count
+    console.countReset = function () { }; // Disable console.countReset
+    console.assert = function () { }; // Disable console.assert
+    console.dir = function () { }; // Disable console.dir
+    console.dirxml = function () { }; // Disable console.dirxml
+    console.profile = function () { }; // Disable console.profile
+    console.profileEnd = function () { }; // Disable console.profileEnd
+    console.markTimeline = function () { }; // Disable console.markTimeline
+    console.timeline = function () { }; // Disable console.timeline
+    console.timelineEnd = function () { }; // Disable console.timelineEnd
+    console.timeStamp = function () { }; // Disable console.timeStamp
+    console.memory = function () { }; // Disable console.memory
+
+
+    window.console = console;
+  </script>
   <title>Selfie</title>
 
   <!-- Meta Tags -->
